--- a/package.json
+++ b/package.json
@@ -11,13 +11,24 @@
     "url": "https://github.com/AbdullahAlger/Angular-Evernote.git"
   },
   "author": "Abdullah Alger",
-  "license": "MIT",
+  "license": "ISC",
   "bugs": {
     "url": "https://github.com/AbdullahAlger/Angular-Evernote/issues"
   },
   "homepage": "https://github.com/AbdullahAlger/Angular-Evernote",
   "dependencies": {
+    "connect-livereload": "^0.5.0",
     "express": "^4.10.2",
-    "gulp": "^3.8.10"
+    "gulp": "^3.8.10",
+    "gulp-autoprefixer": "^2.0.0",
+    "gulp-bower": "0.0.7",
+    "gulp-changed": "^1.0.0",
+    "gulp-minify-css": "^0.3.11",
+    "gulp-plumber": "^0.6.6",
+    "gulp-rename": "^1.2.0",
+    "gulp-ruby-sass": "^0.7.1",
+    "gulp-sass": "^1.1.0",
+    "gulp-sourcemaps": "^1.2.8",
+    "node-bourbon": "^1.2.3"
   }
 }
