--- a/package.json
+++ b/package.json
@@ -17,10 +17,15 @@
   },
   "homepage": "https://github.com/AbdullahAlger/Angular-Evernote",
   "dependencies": {
+    "body-parser": "latest",
     "connect-livereload": "^0.5.0",
+    "cookie-parser": "^1.3.3",
+    "cookie-session": "^1.1.0",
     "enml-js": "^0.1.3",
+    "errorhandler": "^1.3.0",
     "evernote": "^1.25.3",
     "express": "^4.10.2",
+    "express-session": "^1.9.2",
     "gulp": "^3.8.10",
     "gulp-autoprefixer": "^2.0.0",
     "gulp-bower": "0.0.7",
@@ -32,9 +37,15 @@
     "gulp-sass": "^1.1.0",
     "gulp-sourcemaps": "^1.2.8",
     "gulp-uglify": "^1.0.1",
+    "method-override": "^2.3.0",
+    "morgan": "^1.5.0",
     "node-bourbon": "^1.2.3",
     "nodemon": "^1.2.1",
     "oauth": "^0.9.12",
+    "passport": "^0.2.1",
+    "passport-evernote": "^0.1.1",
+    "serve-favicon": "^2.1.7",
+    "serve-static": "^1.7.1",
     "thrift": "^0.9.2",
     "tiny-lr": "^0.1.4",
     "xhr": "^1.17.0"
