--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-autoprefixer": "^2.0.0",
     "gulp-bower": "0.0.7",
     "gulp-changed": "^1.0.0",
+    "gulp-livereload": "^2.1.1",
     "gulp-minify-css": "^0.3.11",
     "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
@@ -40,6 +41,7 @@
     "method-override": "^2.3.0",
     "morgan": "^1.5.0",
     "node-bourbon": "^1.2.3",
+    "node-neat": "^1.3.0",
     "nodemon": "^1.2.1",
     "oauth": "^0.9.12",
     "passport": "^0.2.1",
