--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "start": "gulp",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "postinstall": "./node_modules/bower/bin/bower install"
   },
   "repository": {
     "type": "git",
@@ -21,6 +22,7 @@
   },
   "homepage": "https://github.com/AbdullahAlger/Angular-Evernote",
   "dependencies": {
+    "bower": "latest",
     "body-parser": "latest",
     "connect-livereload": "^0.5.0",
     "cookie-parser": "^1.3.3",
