--- a/package.json
+++ b/package.json
@@ -3,12 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "engines": {
-    "node": "0.10.x"
-  },
   "scripts": {
     "start": "gulp",
-    "test": "echo \"Error: no test specified\" && exit 1",
     "postinstall": "./node_modules/bower/bin/bower install"
   },
   "repository": {
@@ -22,20 +18,24 @@
   },
   "homepage": "https://github.com/AbdullahAlger/Angular-Evernote",
   "dependencies": {
-    "bower": "latest",
+    "angular": "^1.5.3",
+    "angular-animate": "^1.5.3",
+    "angular-material": "^1.0.7",
     "body-parser": "latest",
+    "bower": "latest",
     "cookie-parser": "^1.3.3",
     "cookie-session": "^1.1.0",
     "errorhandler": "^1.3.0",
     "evernote": "^1.25.3",
     "express": "^4.10.2",
     "express-session": "^1.9.2",
-    "gulp": "^3.8.10",
+    "gulp": "^3.9.1",
     "gulp-autoprefixer": "^2.0.0",
     "gulp-livereload": "^2.1.1",
     "gulp-plumber": "^0.6.6",
     "gulp-rename": "^1.2.0",
-    "gulp-ruby-sass": "^0.7.1",
+    "gulp-ruby-sass": "^2.0.6",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.0.1",
     "method-override": "^2.3.0",
     "morgan": "^1.5.0",
@@ -46,5 +46,9 @@
     "serve-static": "^1.7.1",
     "thrift": "^0.9.2",
     "xhr": "^1.17.0"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.11.2",
+    "gulp": "^3.9.1"
   }
 }
